--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
-<link rel="stylesheet" type="text/css" href="styles/style.css" />
-<head>
 
+<head>
+<link rel="stylesheet" type="text/css" href="styles/style.css" />
 </head>
 
 <body>
+<div id="menu">
+
+</div>
 
 </body>
 
