Firstpage nearly setup

--- a/index.html
+++ b/index.html
@@ -2,11 +2,31 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="styles/style.css" />
+<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Molengo" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <div id="menu">
-
+	<div id="menulogo">
+		<a>Warped Build Team</a>
+		<div id="menucontainer">
+			<ul>
+				<li><a href="">Home</a></li>
+				<li><a href="">About</a></li>
+				<li><a href="">Gallery</a></li>
+				<li><a href="">Contact</a></li>
+				<li><a href="">WarpedMc</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div id="image">
+	<div id="middletext">
+		<p>Welcome To Warped Build Teams Offical Website</p>
+		<a href="somewhere">Click here for more</a>
+	</div>
 </div>
 
 </body>
