--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 <div id="image">
 	<div id="middletext">
-		<p>Welcome To Warped Build Teams Offical Website</p>
+		<p>Welcome To Warped Build Team's Offical Website</p>
 		<a href="somewhere">Click here for more</a>
 	</div>
 </div>
